# feedback-learning

./: .gitignore  README.md
mnist-classifier/: Trainer.py  mnist-classifier.ipynb
q-learning/: CMakeLists.txt  main.cpp
q-learning/environments/: grid_world.cpp  grid_world.h
q-learning/q-learning/: q-learning.cpp  q-learning.h
q-learning/vis/: q-learning_vis.cpp  q-learning_vis.h
something-in-the-way/: a2c.py  a2c_agents.py  a2c_main.py  agent.py  dynamic_hints.py  embedders.py  experiments.ipynb  utils.py
something-in-the-way/a2c/configs/: default_config.json  impassable_30.json  meta_config.json  woal_config.json
something-in-the-way/configs/: extra_simple_field_config.pkl
something-in-the-way/env/: __init__.py  env.py  field.py  test_env.py
